force-app/main/default/objects/Discount_Strategy_Config__mdt/Discount_Strategy_Config__mdt.object-meta.xml
<CustomObject>
    <label>Discount Strategy Config</label>
    <pluralLabel>Discount Strategy Configs</pluralLabel>
</CustomObject>