force-app/main/default/objects/Discount_Strategy_Config__mdt/fields/Flat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate__c</fullName>
    <label>Flat Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>