force-app/main/default/objects/Discount_Strategy_Config__mdt/fields/Strategy_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Class_Name__c</fullName>
    <label>Strategy Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>